--- a/团餐 小程序/components/fixed-btn/fixed-btn.wxml
+++ b/团餐 小程序/components/fixed-btn/fixed-btn.wxml
@@ -1,4 +1,4 @@
-<view class='fixed-btn  {{isIpx?"isIpx":""}}'>
+<view class='{{clearFixed?"clearFixed":""}} fixed-btn  {{isIpx?"isIpx":""}}'>
   <slot />
 </view>
-<view class='height  {{isIpx?"isIpx":""}}'></view>
+<view class='{{clearFixed?"clearFixed":""}} height  {{isIpx?"isIpx":""}}'></view>
