--- a/团餐 小程序/pages/company/index.wxss
+++ b/团餐 小程序/pages/company/index.wxss
@@ -13,7 +13,11 @@
   font-weight: 500;
   color: rgba(11, 13, 44, 1);
 }
-
+.van-hairline--bottom:after, .van-hairline--left:after,
+.van-hairline--right:after, .van-hairline--surround:after,
+.van-hairline--top-bottom:after, .van-hairline--top:after, .van-hairline:after {
+  display: none;
+}
 /* .van-cell .van-field__input{
 
 } */
